--- a/public/ejsviews/food_modal.ejs
+++ b/public/ejsviews/food_modal.ejs
@@ -1,15 +1,15 @@
-<a href="#" class="close">&times;</a>
 <img src="/food_pic/<%=food_id%>.jpg" width="350"/><br>
 
 <span id="cfoodId" hidden><%=food_id%></span>
-<div class="row">
+<div class="row" style="text-align:center">
 		<span class="h2font"  id="cfoodName"><%=food_name%></span><br>
-		<span id="cfoodPrice" class="h2font"><%=food_price%>元</span> 
+		<span id="cfoodPrice" class="h2font"><%=food_price%>元</span> <br>
 		<button href="#" class=" button success" id="comfirmBtn" style="">确认</button>
+		<button href="#" class=" button success  alert"  id="cancelBtn"  style="">取消</button>
 </div>
 
 <script>
-		$('.modal .close').on('click', function(e){
+		$('.modal #cancelBtn').on('click', function(e){
 			e.preventDefault();
 			$.modal().close();
 		});
@@ -17,7 +17,10 @@
 		$('.modal #comfirmBtn').click(function(){
 			$("#numberscr").val("");
 			$.post('/cooking/add/',{bill_id:<%=bill_id%>,table_num:<%=table_num%>,food_id:<%=food_id%>},function(data){
-				$("#foodList").append("<tr id='cid"+data.cooking_id+"'><td><%=food_id%></td><td><%=food_name%></td><td><%=food_price%></td><td>等待接单</td></tr>");
+				$("#foodList").append("<tr id='cid"+data.cooking_id+"'><td><%=food_id%></td><td><%=food_name%></td><td><%=food_price%></td><td class='cookState'>等待接单</td></tr>");
+				cooking_io.emit("cooking",{table_num:<%=table_num%>,bill_id:<%=bill_id%>,food_id:<%=food_id%>,food_name:'<%=food_name%>',cooking_id:data.cooking_id},function(state){
+					console.log(state);
+				});
 				$.modal().close();
 			})
 		});
