--- a/public/ejsviews/selected_foods.ejs
+++ b/public/ejsviews/selected_foods.ejs
@@ -3,6 +3,6 @@
 		<td><%=data[i].food_id%></td>
 		<td><%=data[i].food_name%></td>
 		<td><%=data[i].food_price%></td>
-		<td><%=data[i].cooking_state%></td>
+		<td  class='cookState'><%=data[i].cooking_state%></td>
 	</tr>
 <%}%>
