--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,9 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>开单页面</title>
+<% include header.ejs %>
 
-    <script src="/js/vendor/jquery.js"></script>
-          <script src="/js/foundation.min.js"></script>
-
-    <link rel="stylesheet" href="/css/foundation.css" />
-    <link rel="stylesheet" href="/css/app.css" />
-    <script src="/js/vendor/modernizr.js"></script>
-  </head>
-  <body>
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#">开单页面</a></h1>
+          <h1><a href="#"><%=title%></a></h1>
         </li>
       </ul>
     </nav>
@@ -32,7 +19,6 @@
 
                   <span id="orderup" class="large radius button " style="font-size:80px;">开单</span>
            </div>   
-          
           </div>
         </form>
     </div>     
@@ -44,6 +30,13 @@
 
     <script>
       $(document).foundation();
+      var order_io_res = io().connect("/");
+      var order_io = io.connect("/order");
+
+      order_io_res.on("order",function(data){
+        console.log(data);
+      })
+
       var storage = window.localStorage;
       var currentNum = storage["table_num"];
       if(!currentNum){
@@ -60,21 +53,31 @@
        var init = function(){
           $("#tableNum").text(currentNum+"号");
           $.get("/table/"+currentNum,function(data){
+            if(data[0].pay_state>0){
+              window.location.href="/account/"+currentNum+"/"+data[0].bill_id;
+              return;
+            }
             if(!data[0].bill_id){
                $("#orderup").click(function(){
                     $.post("/bill/add/"+currentNum,function(res){
                       storage["bill_id"]=res.bill_id;
-                      storage["table_num"]=currentNum;                    
-                      window.location.href="/customer?table_num="+currentNum+"&bill_id="+data.bill_id;
+                      storage["table_num"]=currentNum;    
+                      order_io.emit('order',{table_num:currentNum,bill_id:res.bill_id},function(data){
+                        if(data==200){
+                          window.location.href="/customer/"+currentNum+"/"+res.bill_id;
+                          return;
+                        }
+                      });                
                     });
                 });
             }else{
-              window.location.href="/customer?table_num="+currentNum+"&bill_id="+data[0].bill_id;
+              window.location.href="/customer/"+currentNum+"/"+data[0].bill_id;
             }
           });
           
        }  
 
+       
 
     </script>
   
