--- a/views/main.ejs
+++ b/views/main.ejs
@@ -22,7 +22,7 @@
 
 		</div>	
 		<div class="small-3  columns">
-			<input class="small-4 columns" type="text" name="admin_pwd" placeholder="密码">
+			<input class="small-4 columns" type="password" name="admin_pwd" placeholder="密码">
 
 		</div>
 			<div class="small-12  columns">
