--- a/views/client.ejs
+++ b/views/client.ejs
@@ -3,6 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+        <script src="/js/vendor/jquery.js"></script>
+
   <style type="text/css">
     body, html {width: 100%;height: 100%;margin:0;font-family:"微软雅黑";}
     #allmap{width:100%;height:500px;}
@@ -11,27 +13,24 @@
   <title>移动地图</title>
 </head>
 <body>
-  <div id="allmap"></div>
-  <p>初始化地图，中心点为（116.4035,39.915），缩放级别为8的北京市地图，2秒后，通过改变中心点坐标，地图平移到广州</p>
+ 
 </body>
 </html>
 <script src="/js/socket.io-1.2.0.js"></script>
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TOe710XxjqaI07FH2aVKR3xW"></script>
 
 <script type="text/javascript">
-  
- var socket = io.connect('/client');
-  socket.on('news', function (data) {
-    console.log(data);
-  });
+     var socket = io.connect('/order');
+     var i = 0;
+  var start= new Date().getTime();
 
-  // 百度地图API功能
-  var map = new BMap.Map("allmap");       
-  map.centerAndZoom(new BMap.Point(116.4035,39.915),8); 
+  for (var i = 100000; i >= 0; i--) {
+      $.get("/table",function(data){
 
-  function showInfo(e){
-    console.log({x:e.point.lng,y:e.point.lat});
-    socket.emit('news',{x:e.point.lng,y:e.point.lat});
-  }
-  map.addEventListener("click", showInfo);
+      })
+  };
+   var end = new Date().getTime();
+
+   console.log(end-start);
+
+
 </script>
