--- a/views/kitchen.ejs
+++ b/views/kitchen.ejs
@@ -74,7 +74,7 @@
 	}
 
 	function getCookingId(obj){
-		return $(obj).find(".cookingId").text()
+		return $(obj).find(".cookingId").text();
 	}
 
 	cooking_io_res.on('cooking',function(data){
